--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 \begin{document}
 
 \JHPSissue{0}   % keep 0 until the issue is assigned
-\JHPSkeywords{XX, TODO}   % add 2-5 keywords
+\JHPSkeywords{I/O fingerprinting, performance analysis, monitoring}% add 2-5 keywords
 
   % Author macro takes Name, Institution, Optional Link to the person, Optional Email
 \JHPSauthor{Eugen Betke}{DKRZ\\Hamburg, Germany}{}{betke@dkrz.de}
